Update menu css

--- a/Atividades Práticas/Atividade 1/estilos.css
+++ b/Atividades Práticas/Atividade 1/estilos.css
@@ -18,13 +18,13 @@ html, body {height:100%;}
 }
 
 .vertical-menu a {
-    background-color: #A52A2A; /* Grey background color */
-    color: white; /* Black text color */
-    display: block; /* Make the links appear below each other */
-    padding: 12px; /* Add some padding */
+    background-color: #A52A2A;
+    color: white; 
+    display: block;
+    padding: 12px;
     text-decoration: none;
 }
 
 .vertical-menu a:hover {
-    background-color: #FA8072; /* Dark grey background on mouse-over */
+    background-color: #FA8072; 
 }
